# autonomous_robot

./: .gitignore  .gitmodules  README.md  frames_2024-12-14_19.12.45.gv  myrobot.gv  warehouse_slam.pgm  warehouse_slam.yaml
autonomous_robot_control/: CMakeLists.txt
autonomous_robot_control/gpio_controller/: pwm_motor_subscriber.py
autonomous_robot_control/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
autonomous_robot_control/install/autonomous_robot_control/lib/autonomous_robot_control/: prototype_joy_driver  teleop_joy_node
autonomous_robot_control/install/autonomous_robot_control/share/autonomous_robot_control/: local_setup.dsv  local_setup.sh  package.ps1  package.sh  package.zsh
autonomous_robot_control/install/autonomous_robot_control/share/autonomous_robot_control/launch/: joystick.launch.py
autonomous_robot_control/install/calc_odom/lib/calc_odom/: encoder_odom
autonomous_robot_control/install/calc_odom/share/calc_odom/: package.bash  package.ps1  package.sh  package.xml
autonomous_robot_control/install/control_hardware/share/control_hardware/: package.sh
autonomous_robot_control/install/joystick/lib/joystick/: prototype_joy_driver  teleop_joy_node
autonomous_robot_control/install/joystick/share/ament_index/resource_index/parent_prefix_path/: joystick
autonomous_robot_control/install/joystick/share/joystick/: package.sh
autonomous_robot_control/install/joystick/share/joystick/launch/: joystick.launch.py
autonomous_robot_control/log/: latest_build  latest_list
autonomous_robot_control/src/: joy_compute_control.cpp  prototype_joy_controller_class.cpp  prototype_joy_driver.cpp  teleop_joy_node.cpp
autonomous_robot_control/src/calc_odom/: setup.cfg  setup.py
autonomous_robot_control/src/control_hardware/: setup.py
autonomous_robot_control/src/control_hardware/control_hardware/: cmd2pwm.py
autonomous_robot_control/src/control_hardware/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
autonomous_robot_control/src/control_hardware/install/control_hardware/share/control_hardware/: package.ps1  package.sh  package.zsh
autonomous_robot_control/src/control_hardware/launch/: control_system.launch.py
autonomous_robot_control/src/control_hardware/log/: latest_build
autonomous_robot_control/src/joystick/: CMakeLists.txt
autonomous_robot_control/src/joystick/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
autonomous_robot_control/src/joystick/install/joystick/include/joystick/joystick/: joy_compute_control.hpp
autonomous_robot_control/src/joystick/install/joystick/lib/joystick/: prototype_joy_driver  teleop_joy_node
autonomous_robot_control/src/joystick/install/joystick/share/joystick/: package.sh
autonomous_robot_control/src/joystick/log/: latest_build
autonomous_robot_control/src/joystick/src/: teleop_joy_node.cpp
autonomous_robot_description/: CMakeLists.txt
autonomous_robot_description/config/: ekf.yaml  joint_controller_real.yaml  joystick.yaml  mapper_params_online_async.yaml  my_robot.lua  nav2_params.yaml  sim_joint_controller .yaml
autonomous_robot_description/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
autonomous_robot_description/launch/: cartographer_sim.launch.py  display.launch.xml  real_robot.launch.py  sim_gazebo.launch.py  sim_gazebo.launch.xml
autonomous_robot_description/log/: latest_build
autonomous_robot_description/rviz/: urdf_config.rviz
autonomous_robot_description/urdf/: autonomous_robot.urdf.xacro  (+3 more)
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
sensors_package/src/install/mpu6050driver/share/mpu6050driver/: local_setup.sh  package.sh  package.xml
(+373 files in other folders)
